@@ -1,3 +1,7 @@
+Sun Mar 17 17:46:21 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* Makefile: Add.
+
 Sun Mar 17 17:44:42 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
